js/src/jit-test/tests/errors/bug1810711.js
var g = newGlobal({newCompartment: true});

try {
  undef()
} catch (err) {
  const handler = { "getPrototypeOf": (x) => () => x };
  const proxy = new g.Proxy(err, handler);
  try {
    proxy.stack
  } catch {}
}
